7.2.2
7.2.1
 - Fix infinite loop in converting `char *` to string. (#377)
 - Deprecated `namedclass`.
 - Convert an entire row using `row::as<type...>()`.
 - Internal rework of `field::to()` and `field::as()` functions.
 - Some more warning options in maintainer mode.
 - Removed the old, DocBook-based tutorial.
 - Fixed wrong `query` and SQLSTATE params to some exceptions. (#378)
7.2.0
 - You can now implicitly convert a `const std::string &` to `zview`.
 - Replaced some overloads for C strings and C++ strings with `zview`.
 - Deprecating `binarystring`.  Use `std::basic_string<std::byte>` instead!
 - Array parser did not recognise escaping in unquoted values.
 - gcc10 test build fix: a result iterator is not the same thing as a `row`.
 - Doc fix: field size does _not_ include terminating zero.  (#356)
 - Fix error message in `demangle_type_name`: printed result, not raw name.
 - Fix compile warning in `demangle_type_name` on GNU systems.
 - Document that string conversions assume non-null values.
 - Start playing with C++20 _concepts._
 - Sketch out concepts-based `PQconnectdbParams` support.  (#343)
 - Add missing link to "datatypes" documentation.  (#346)
 - Supports `to_string`, `stream_to`, etc. for `binarystring`.  (#312)
 - Fixed infinite recursion when using `std::optional` in `stream_to`.  (#364)
 - Home-rolled hex-escaping.  Saves an allocation.
 - Catch floating-point negative overflow in `check_cast`, not underflow.
 - Bit more work on CMake build doc. (#318)
 - Typo in `datatypes.md`: `nullness`, not `nullness_traits`. (#353)
 - Fixed test names map in `tests/runner.cxx`. (#354)
 - Integral `from_string` now accept leading whitespace, as in composite types.
 - Experimental support basics for composite types.  (#355)
 - Use `stream_from` without knowing the number of fields.  (#357)
 - Global `size_buffer` function.
 - `quote()` now works for always-null types without conversions defined.
 - `std::nullopt` now converts to an SQL null.