@@ -1,4 +1,5 @@
 7.2.2
+ - Implicit `zview` constructor from `char const *`. (#389)
 7.2.1
  - Fix infinite loop in converting `char *` to string. (#377)
  - Deprecated `namedclass`.
